# parrot

./: .gitignore  Cargo.toml  LICENSE  README.md  example.echo
parser/: Cargo.toml
parser/src/: error.rs  instruction.rs  lexer.rs  lib.rs  parse.rs  token.rs
src/: main.rs
syntax/TOML/: syntax_test_toml.toml
templates/: index.aml  status.aml
themes/: custom.stTheme
ui/: Cargo.toml
ui/src/: audio.rs  compile.rs  context.rs  document.rs  editor.rs  error.rs  instructions.rs  lib.rs  markers.rs  random.rs  syntax.rs  textbuffer.rs
ui/src/templates/: error.aml  index.aml  popup.aml
ui/src/themes/: togglebit.tmTheme
vm/: Cargo.toml
vm/src/: context.rs  error.rs  instructions.rs  lib.rs
